Modul_7/Cw1_install/ingress-test-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-test-pk
spec:
  rules:
  - host: pk
    http:
      paths:
      - path: /
        backend:
          serviceName: pk
          servicePort: 80
